--- a/index.html
+++ b/index.html
@@ -1,1 +1,40 @@
-Hello World
+歡迎使用 Midi ，為保護您的個人資料與隱私權，特別制定此隱私權政策。我們將說明我們如何收集、處理及使用您個人資料，以及保護您個人資料與隱私之措施。
+
+本隱私政策，僅適用於 Midi 行動應用程式。並不適用於任何第三方及其產品、行為或服務。 Midi 無法控制第三方如何收集、處理、使用或保護您的個人資料。有關第三方隱私權施行原則的詳細資訊，請參閱其隱私權政策。使用本服務，表示您瞭解並同意我們的隱私權政策，本政策適用於所有訪客、用戶和其他存取本服務的人。 我們可能會不定時更新本政策，當您持續使用我們的服務時，視為同意最新版本的隱私權政策，修正後的條款將刊登於 Midi 行動裝置上。
+
+
+1.我們收集的資訊
+
+我們收集的資訊種類如下。
+
+您直接提供給我們的資訊：
+a.您註冊 Midi 帳號時的用戶名稱、密碼和電子郵件地址。
+b.您提供的個人檔案資料，包含但不限於姓名、年齡、身高、體重、BMI值、運動頻率。這些資料讓我們能幫助您推算每日可攝取的熱量和消耗的熱量，進而推薦您健康管理的資訊。
+c.您張貼在本服務的用戶內容，包含但不限於相片、食物照片、留言、飲食日記、地理位置和其他資訊。
+d.您在 Midi 中的搜尋資訊。
+d.您和 Midi 之間的通訊。舉例來說，我們可能發送和本服務相關的電子郵件給您。若您認為這樣的電子郵件打擾到您，在我們收到您的回覆信件並回覆您後，將不會再寄信給您。
+
+分析資訊：
+我們使用第三方分析工具幫助我們評估本服務的流量和使用趨勢。這些工具會收集從您的裝置或是我們服務所傳送的資訊，包括但不限於手機型號、地理位置、作業類型、您在 Midi 中的點擊資訊，以及有助於我們提升服務的其他資訊，定位服務可以通過移動設備設置隨時啟用或關閉。我們所收集和使用的分析資訊，會和其他用戶的分析資訊合併使用，因此無法被用來辨識任何特定個別用戶。
+
+
+2.我們如何使用您的資訊
+
+除了在本「隱私政策」中說明的資料使用方式外，我們還可能將收到的資訊用於：
+a.協助您在登入後更有效率地存取資訊。
+b.推算每日可攝取的熱量、運動時消耗的熱量等，並依據您的資料狀態推薦飲食。
+c.記住資料，讓您在造訪過程中或下次造訪本服務時，無需重新輸入。
+d.提供個人化內容和資訊給您。
+e.提供、改進、測試和監測我們服務的效能。
+d.開發和測試新產品及功能。
+e.監測衡量指標，例如訪客總數、流量，以及人口分佈情形。
+f.診斷或改正技術問題。
+g.自動更新您裝置上的 Midi 應用程式。
+h.藉由您提供的個人資料，可讓我們通知您 Midi 最新的產品公告、系統更新和
+活動我們也可能根據您提供的資料聯繫您。
+i.我們可能會做使用者行為的分析，包含但不限於受眾統計、行為分析、研究
+等等，我們會做資料去識別化的處理，我們不會透露您的個人身份。
+
+
+3.資料的修改與刪除
+若您發現資料有誤或希望刪除，請您聯絡我們: peteryuhsin@icloud.com
